<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mContainer"
        android:background="@drawable/gredient_bg"
        tools:context=".ui.fragments.PlayFragment">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/music_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/playerfragment_bg_img" />

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66000000"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/music_title"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:singleLine="true"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline10" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/music_artist"
            android:textColor="@color/white"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/music_title"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline4"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline6"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline7"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/music_cover_img"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            android:contentDescription="@string/playerfragment_cover_img" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/exo_controls_play"
            android:id="@+id/music_play_btn"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintBottom_toBottomOf="@+id/music_bg"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/playerfragment_playbtn"
            android:focusable="true" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline8"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/exo_ic_skip_previous"
            android:id="@+id/music_prev_btn"
            app:layout_constraintBottom_toBottomOf="@+id/music_play_btn"
            app:layout_constraintTop_toTopOf="@+id/music_play_btn"
            app:layout_constraintEnd_toStartOf="@+id/music_play_btn"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            android:contentDescription="@string/playerfragment_prevbtn" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/exo_ic_skip_next"
            android:id="@+id/music_next_btn"
            app:layout_constraintBottom_toBottomOf="@+id/music_play_btn"
            app:layout_constraintTop_toTopOf="@+id/music_play_btn"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toEndOf="@+id/music_play_btn"
            android:contentDescription="@string/playerfragment_nextbtn" />

    <androidx.appcompat.widget.AppCompatSeekBar
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:id="@+id/music_seekbar"
            android:progressDrawable="@drawable/bd_seerbar"
            android:thumbTint="#2896F0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline9"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/music_start_duration"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/music_end_duration"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline10"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu"
            android:id="@+id/music_list_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:tint="@color/white"
            android:contentDescription="@string/playerfragment_playlist" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/exo_styled_controls_repeat_all"
            android:id="@+id/music_playmode_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            android:contentDescription="@string/playerfragment_repeatbtn" />

    <ImageView
            android:layout_width="33dp"
            android:layout_height="31dp"
            app:srcCompat="@drawable/ic_left"
            android:id="@+id/mucis_back_btn"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            android:layout_marginEnd="24dp"
            app:tint="@color/white"
            android:contentDescription="@string/playerfragment_backbtn" />
</androidx.constraintlayout.widget.ConstraintLayout>